k8s/monitoring/alertmanager-deploy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alertmanager
  template:
    metadata:
      labels:
        app: alertmanager
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: alertmanager
        image: prom/alertmanager:latest
        ports:
          - containerPort: 9093
        volumeMounts:
        - name: alertmanager-conf
          mountPath: /prometheus
        command:
          - alertmanager
        args:
          - '--storage.path=/data'
          - '--config.file=/prometheus/alertmanager.yml'
      volumes:
        - name: alertmanager-conf
          configMap:
            name: alertmanager-conf
---
apiVersion: v1
kind: Service
metadata:
  name: alertmanager
  namespace: monitoring
  labels:
    app: alertmanager
spec:
  selector:
    app: alertmanager
  type: NodePort
  ports:
  - name: prometheus
    protocol: TCP
    port: 9093
