k8s/monitoring/aws-exporter.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aws-exporter
  namespace: monitoring
  labels:
    app: aws-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aws-exporter
  template:
    metadata:
      labels:
        app: aws-exporter
    spec:
      containers:
      - name: aws-exporter
        image: prom/cloudwatch-exporter:latest
        ports:
          - containerPort: 9601
        volumeMounts:
          - name: aws-exporter-conf
            mountPath: /config/config.yml
            subPath: config.yml
      volumes:
        - name: aws-exporter-conf
          configMap:
            name: aws-exporter-conf

---
apiVersion: v1
kind: Service
metadata:
  name: aws-exporter
  namespace: monitoring
  labels:
    app: aws-exporter
spec:
  selector:
    app: aws-exporter
  ports:
  - name: aws-exporter
    protocol: TCP
    port: 9106
