k8s/monitoring/dashy.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: dashy
  namespace: monitoring
  labels:
    app: dashy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: dashy
  template:
    metadata:
      labels:
        app: dashy
    spec:
      containers:
      - name: dashy
        image: lissy93/dashy:latest
        ports:
          - containerPort: 80
        volumeMounts:
        - name: dashy-conf
          mountPath: /app/public/conf.yml
          subPath: conf.yml
      volumes:
        - name: dashy-conf
          configMap:
            name: dashy-conf

---
apiVersion: v1
kind: Service
metadata:
  name: dashy
  namespace: monitoring
  labels:
    app: dashy
spec:
  selector:
    app: dashy
  ports:
  - name: dashy
    protocol: TCP
    port: 80

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashy-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - monitoring.gear-tech.io
      secretName: tlscert-with-ca
  rules:
    - host: monitoring.gear-tech.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: dashy
                port:
                  number: 80
