k8s/monitoring/grafana.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      securityContext:
        runAsUser: 0
      containers:
      - name: grafana
        image: grafana/grafana:latest
        ports:
          - containerPort: 3000
        volumeMounts:
        - name: grafana-datasources
          mountPath: /etc/grafana/provisioning/datasources
        - name: grafana-dashboards-conf
          mountPath: /etc/grafana/provisioning/dashboards
        - name: grafana-dashboards-data
          mountPath: /var/lib/grafana/dashboards       
        - name: grafana-data
          mountPath: /var/lib/grafana/
      volumes:
        - name: grafana-datasources
          configMap:
            name: grafana-datasources
        - name: grafana-dashboards-conf
          configMap:
            name: grafana-dashboards-conf
        - name: grafana-dashboards-data
          configMap:
            name: grafana-dashboards-data
        - name: grafana-data
          persistentVolumeClaim:
            claimName: grafana-data

---
apiVersion: v1
kind: Service
metadata:
  name: grafana
  namespace: monitoring
  labels:
    app: grafana
spec:
  selector:
    app: grafana
  ports:
  - name: grafana
    protocol: TCP
    port: 3000

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  namespace: monitoring
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
    nginx.ingress.kubernetes.io/ssl-redirect: 'true'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - monitoring.gear-tech.io
      secretName: tlscert-with-ca
  rules:
    - host: monitoring.gear-tech.io
      http:
        paths:
          - path: /grafana(/|$)(.*)
            pathType: Prefix
            backend:
              service:
                name: grafana
                port:
                  number: 3000
